[Curl] Fix compilation errors https://bugs.webkit.org/show_bug.cgi?id=174085

Patch by Daewoong Jang <daewoong.jang@navercorp.com> on 2017-07-03
Reviewed by Alex Christensen.

* platform/network/curl/CurlContext.cpp:
(WebCore::CurlContext::initCookieSession):
* platform/network/curl/CurlContext.h:

Canonical link: https://commits.webkit.org/190947@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219095 268f45cc-cd09-0410-ab3c-d52691b4dbfc